Fri Jul  4 15:31:27 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/orbsvcs/Makefile.am:

          Removed Statistic.{h,inl,cpp} and added
          Timestamp_Monitor.{h,cpp} to the CosNotification_MC build.

        * orbsvcs/tests/unit/Notify/MC/NotificationServiceMonitor/NotificationServiceMonitor.cpp:

          Disabled some test result checks for HPUX platforms,
          they seem to have a different number of monitors in
          the registry, since several are now created automatically
          for ACE message queues, CDR buffers, POA active object
          maps, etc., but it isn't a bug.

Thu Jul  3 19:17:57 UTC 2008  William R. Otte  <wotte@dre.vanderbilt.edu>

        * TAO_IDL/fe/y.tab.cpp:
          Added a couple spaces to a comment to force a commit, some builds were
          thinking this was out of date. 
        
Wed Jul 02 16:16:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Incoming_Message_Stack.h:
        * orbsvcs/orbsvcs/Trader/Trader.h:
          Borland C++ changes

        * tao/RTPortableServer/RT_Servant_Dispatcher.cpp:
        * orbsvcs/orbsvcs/Event/EC_Reactive_ConsumerControl.cpp:
          Layout change

        * tao/Stub.h:
          Layout and doxygen changes

Wed Jul 02 12:59:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/tests/unit/Notify/MC/NotificationServiceMonitor/NotificationServiceMonitor.cpp:

          Fixed multiple definition of for loop i warnings.

Wed Jul  2 12:45:53 UTC 2008  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * Updated the COPYING file to make it consistent with what's on the website.

Wed Jul 02 12:47:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/tests/unit/Notify/MC/MonitorManager/MonitorManager.cpp:
        * orbsvcs/tests/unit/Notify/MC/MonitorControlExt/MonitorControlExt.cpp:
        * tests/Monitor/Marshal_Buffer/client.cpp:

          Fixed unused variable warnings.
