@@ -1,7 +1,7 @@
 # $Id$
 
 This test verifies that the PortableInterceptor::ForwardRequest
-exception support is working properly.  There are three cases that it
+exception support is working properly.  There are four cases that it
 tests:
 
   - PortableInterceptor::ForwardRequest exception thrown from a client
@@ -11,6 +11,8 @@ tests:
     point.
   - PortableInterceptor::ForwardRequest exception thrown from the
     receive_request() server request interception point.
+  - PortableInterceptor::ForwardRequest exception thrown from the
+    send_exception() server request interception point.
 
 The reason why there are two server side cases is because the
 receive_request_service_contexts() interception point occurs before
@@ -42,8 +44,14 @@ occurs:
      point will then throw the PortableInterceptor::ForwardRequest
      exception to cause the request to be forwarded back to servant
      two.
- 10) At this point, the request will actually be handled by servant
-     two.
+ 10) The ServerRequestInterceptor::receive_request() interception
+     point then throw an OBJ_NOT_EXIST system exception which will be
+     caught in the ServerRequestInterceptor::send_exception()
+     interception point.  We will then throw the
+     PortableInterceptor::ForwardRequest exception to cause the
+     request to be forwarded back to servant one again.
+ 11) At this point, the request will actually be handled by servant
+     one.
 
 Test output should be similar to the following:
 
@@ -67,6 +75,14 @@ SERVER (1604|1276) Request 4 will be forwarded to object 2
 SERVER (1604|1276) via receive_request().
 CLIENT (1376|1540) Received LOCATION_FORWARD reply.
 CLIENT: Request 4 handled by object 2.
-Server is shutting down via object 2.
+CLIENT: Issuing request 5.
+SERVER (597|3081500368) OBJ_NOT_EXIST exception thrown for request 5
+SERVER (597|3081500368) via receive_request().
+SERVER (597|3081500368) OBJ_NOT_EXIST exception caught for request 5
+SERVER (597|3081500368) will be forwarded to object 1
+SERVER (597|3081500368) via send_exception().
+CLIENT (598|3080672976) Received LOCATION_FORWARD reply.
+CLIENT: Request 5 handled by object 1.
+Server is shutting down via object 1.
 Event loop finished.
 PortableInterceptor::ForwardRequest test passed.
